--- a/src/main/resources/example.fxml
+++ b/src/main/resources/example.fxml
@@ -1,34 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cz.educanet.gui.Controller">
    <children>
-      <AnchorPane layoutX="25.0" layoutY="67.0" prefHeight="310.0" prefWidth="550.0" AnchorPane.bottomAnchor="23.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="67.0">
+      <AnchorPane layoutX="25.0" layoutY="82.0" prefHeight="280.0" prefWidth="550.0">
          <children>
-            <Button fx:id="btnVypocitat" layoutX="389.0" layoutY="8.0" mnemonicParsing="false" onAction="#onClickVypocitat" prefHeight="25.0" prefWidth="146.0" text="Vypočítat">
-               <font>
-                  <Font name="Arial" size="17.0" />
-               </font>
-            </Button>
-            <TextField fx:id="btnFieldOne" layoutY="8.0" prefHeight="31.0" prefWidth="134.0" />
-            <TextField fx:id="btnFieldTwo" layoutX="241.0" layoutY="8.0" prefHeight="31.0" prefWidth="134.0" />
-            <ComboBox fx:id="btnDropdown" layoutX="144.0" layoutY="8.0" prefHeight="31.0" prefWidth="84.0" />
-            <Text layoutX="8.0" layoutY="255.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Výsledek: " wrappingWidth="161.33673095703125">
-               <font>
-                  <Font name="System Bold" size="29.0" />
-               </font>
-            </Text>
+            <Button fx:id="startButton" layoutX="123.0" layoutY="58.0" mnemonicParsing="false" onAction="#onClickedStart" prefHeight="54.0" prefWidth="319.0" text="Start" AnchorPane.bottomAnchor="168.0" AnchorPane.leftAnchor="123.0" AnchorPane.rightAnchor="124.0" AnchorPane.topAnchor="58.0" />
+            <Button fx:id="exitButton" layoutX="125.0" layoutY="133.0" mnemonicParsing="false" onAction="#onClickedExit" prefHeight="54.0" prefWidth="319.0" text="Exit" AnchorPane.bottomAnchor="93.0" AnchorPane.leftAnchor="125.0" AnchorPane.rightAnchor="122.0" AnchorPane.topAnchor="133.0" />
          </children>
       </AnchorPane>
-      <Text layoutX="25.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kalkulačka" wrappingWidth="229.33673095703125">
+      <Text fill="RED" layoutX="133.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Epická Adventure Hra" wrappingWidth="563.7367553710938" AnchorPane.bottomAnchor="293.7138671875" AnchorPane.leftAnchor="133.0" AnchorPane.rightAnchor="0.26324462890625" AnchorPane.topAnchor="57.0732421875">
          <font>
-            <Font name="Arial Black" size="35.0" />
+            <Font name="Gill Sans MT Bold" size="37.0" />
          </font>
       </Text>
    </children>
