--- a/src/main/resources/example.fxml
+++ b/src/main/resources/example.fxml
@@ -9,14 +9,20 @@
    <children>
       <AnchorPane layoutX="25.0" layoutY="82.0" prefHeight="280.0" prefWidth="550.0">
          <children>
-            <Button fx:id="startButton" layoutX="123.0" layoutY="58.0" mnemonicParsing="false" onAction="#onClickedStart" prefHeight="54.0" prefWidth="319.0" text="Start" AnchorPane.bottomAnchor="168.0" AnchorPane.leftAnchor="123.0" AnchorPane.rightAnchor="124.0" AnchorPane.topAnchor="58.0" />
-            <Button fx:id="exitButton" layoutX="125.0" layoutY="133.0" mnemonicParsing="false" onAction="#onClickedExit" prefHeight="54.0" prefWidth="319.0" text="Exit" AnchorPane.bottomAnchor="93.0" AnchorPane.leftAnchor="125.0" AnchorPane.rightAnchor="122.0" AnchorPane.topAnchor="133.0" />
+            <Button fx:id="firstButton" layoutX="59.0" layoutY="76.0" mnemonicParsing="false" onAction="#onClickedFirst" prefHeight="145.0" prefWidth="148.0" text="Doleva" AnchorPane.bottomAnchor="59.0" AnchorPane.leftAnchor="59.0" AnchorPane.rightAnchor="343.0" AnchorPane.topAnchor="76.0" />
+            <Text fx:id="textDesc" layoutX="-6.0" layoutY="9.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ocitl jsi se v temné uličce, kterou cestu si vybereš ?" wrappingWidth="510.13671875" AnchorPane.bottomAnchor="265.478515625" AnchorPane.leftAnchor="-6.0" AnchorPane.rightAnchor="45.86328125" AnchorPane.topAnchor="-14.740234375">
+               <font>
+                  <Font size="22.0" />
+               </font>
+            </Text>
+            <Button fx:id="secondButton" layoutX="264.0" layoutY="76.0" mnemonicParsing="false" onAction="#onClickedSecond" prefHeight="145.0" prefWidth="148.0" text="Doprava" AnchorPane.bottomAnchor="59.0" AnchorPane.leftAnchor="264.0" AnchorPane.rightAnchor="138.0" AnchorPane.topAnchor="76.0" />
          </children>
       </AnchorPane>
-      <Text fill="RED" layoutX="133.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Epická Adventure Hra" wrappingWidth="563.7367553710938" AnchorPane.bottomAnchor="293.7138671875" AnchorPane.leftAnchor="133.0" AnchorPane.rightAnchor="0.26324462890625" AnchorPane.topAnchor="57.0732421875">
+      <Text fill="RED" layoutX="142.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Epická Adventure Hra" wrappingWidth="563.7367553710938" AnchorPane.bottomAnchor="330.7138671875" AnchorPane.leftAnchor="142.0" AnchorPane.rightAnchor="-8.73675537109375" AnchorPane.topAnchor="20.0732421875">
          <font>
-            <Font name="Gill Sans MT Bold" size="37.0" />
+            <Font name="System Bold" size="37.0" />
          </font>
       </Text>
+      <Button fx:id="exitButton" layoutX="7.0" layoutY="30.0" mnemonicParsing="false" onAction="#onClickedExit" prefHeight="29.0" prefWidth="127.0" text="Exit" />
    </children>
 </AnchorPane>
